# gameboy-emulator-rust

./: Cargo.toml
src/: main.rs
src/apu/: channels.rs  cpal_audio_output.rs  mod.rs  rodio_audio_output.rs  sdl_audio_output.rs
src/cpu/: instructions.rs  interrupts.rs  mod.rs  registers.rs  timers.rs
src/input/: mod.rs
src/memory/: cartridge.rs  mod.rs
src/ppu/: mod.rs  palette.rs  tile.rs
src/utils/: frame_sequencer.rs  mod.rs
