[package]
name = "gameboy-emulator-rust"
version = "0.1.0"
authors = ["Nicholas Lange <nick.t.lange@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.16"
minifb = "0.18.0"
cpal = "0.12.1"
blip_buf = "0.1.4"
ringbuf = "0.2.2"
rodio = "0.11.0"
