[package]
name = "gameboy-emulator-rust"
version = "0.1.0"
authors = ["Nicholas Lange <nick.t.lange@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "^0.3"
minifb = "^0.19.0"
cpal = "^0.12"
blip_buf = "0.1.4"
